# txt-hours

./: README.md  pyproject.toml  txt_hours.py
src/txt_hours/: __main__.py  main.py  txt_hours.py
tests/: test_txt_hours.py
tests/res/: valid.txt
