[tool.poetry]
name = "txt-hours"
version = "0.2.0"
description = ""
authors = ["Andrew Simmons <agsimmons0@gmail.com>"]
license = "GPL-3.0-only"
readme = "README.md"

[tool.poetry.scripts]
txthours = 'txt_hours.main:main'

[tool.poetry.dependencies]
python = "^3.8.10"
pandas = "^1.3.5"

[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
flake8 = "^6.0.0"
pytest = "^6.2.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
